<resources>
    <string name="app_name">Roolet</string>
    <string name="roolet">Roolet</string>
    <string name="add_party_label">Press the \"Add\" Button to create a new Party</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="party_name">Party Name</string>
    <string name="search_contacts">Search Contacts…</string>
    <string name="cancel">Cancel</string>
    <string name="work">Work</string>
    <string name="home">Home</string>
    <string name="mobile">Mobile</string>
    <string name="select_phone_label">Select which phone number you would like to send a message to</string>
    <string name="phone_numbers">Phone Numbers</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="no_party_name">No Party Name</string>
    <string name="add_name_for_party">Add a name for this party homie</string>
    <string name="no_members">No Members</string>
    <string name="add_people_to_party">Add people to this party by picking them in the table</string>
    <string name="settings">Settings</string>
    <string name="call_type">Call Type</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="call_settings">Call Settings</string>

    <string name="allow_repeat_calls">Allow Repeat Calls</string>
    <string name="game_mode">Game Mode</string>
    <string name="general">General</string>
    <string name="report_a_problem">Report a Problem</string>
    <string name="about_us">About Us</string>

    <string name="title_activity_settings">SettingsActivity</string>

    <string name="repeat_calls_pref">repeat-calls-pref</string>
    <string name="game_mode_pref">game-mode-pref</string>
    <string name="groups_tutorial_seen_pref">groups-tutorial-seen-pref</string>
    <string name="group_detail_tutorial_seen_pref">group-detail-tutorial-seen-pref</string>
    <string name="contacts_tutorial_seen_pref">contacts-tutorial-seen-pref</string>

    <!--  Tutorial strings  -->
    <string name="skip">Skip</string>
    <string name="roolet_uses_contacts_message">Roolet uses your contacts to build parties of people to call from</string>
    <string name="after_building_party_message">After building a party, you can go to that party\'s page by selecting it in this table</string>
    <string name="tap_anywhere_to_continue">Tap anywhere to continue</string>
    <string name="de_squaw">De Squaw</string>
    <string name="de_squaw_members">Terrance Diggs, Jorge Arnedo, Charlotte Kennedy and 8 Others</string>
    <string name="tap_add_group_or_settings">Tap here to create a new party or change settings</string>
    <string name="tap_anywhere_to_dismiss">Tap anywhere to dismiss</string>
    <string name="edit_the_name_of_party_here">Edit the name of this party here</string>
    <string name="select_party_members_from_your_contacts">Select party members from your contacts</string>
    <string name="tap_here_to_edit_your_party">Tap here to edit your party</string>
    <string name="tap_this_button_to_call_a_random_member_from_this_party">Tap this button to call a random member from this party</string>
    <string name="game_mode_summary">Roolet will give you a rule/challenge to follow for each call</string>
    <string name="making_fun_stuff">Making fun stuff :)</string>
    <string name="cirtual_x_d17_productions">Cirtual x D17 Productions</string>
    <string name="create_group">Create Group</string>
    <string name="edit_group">Edit Group</string>

    <string name="your_rule">Your Rule</string>
    <string name="got_it">Got it</string>
    <string name="contact_permissions_needed">We don\'t have permission to get your contacts, open your phone settings to fix that :)</string>
    <string name="call_permissions_needed">We need your permission to make phone calls, open your phone settings to fix that :)</string>
    <string name="are_you_sure_you_want_to_delete_this_party">Are you sure you want to delete this party?</string>
    <string name="hold_up">Hold up</string>
    <string name="nah">Nah</string>
    <string name="yea">Yea</string>

    <string name="oooop">Oooop!</string>
    <string name="all_members_called">All members of this party have been called</string>
    <string name="someone_with_a_really_long_name">Someone with a really long name</string>
</resources>