<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/call_settings">

        <SwitchPreferenceCompat
            app:key="@string/repeat_calls_pref"
            app:title="@string/allow_repeat_calls" />

        <SwitchPreferenceCompat
            app:key="@string/game_mode_pref"
            app:summary="@string/game_mode_summary"
            app:title="@string/game_mode" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/general">

        <Preference app:title="Report a Problem">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="mailto:charlesawoodson@gmail.com" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory app:title="Follow Us">

        <Preference
            android:icon="@drawable/facebook_logo"
            app:title="Facebook">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.facebook.com/letsroolet" />
        </Preference>

        <Preference
            android:icon="@drawable/twitter_logo"
            app:title="Twitter">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.twitter.com/letsroolet" />
        </Preference>

<!--        <Preference-->
<!--            android:icon="@mipmap/ic_launcher_round"-->
<!--            app:title="Instagram">-->
<!--            <intent-->
<!--                android:action="android.intent.action.VIEW"-->
<!--                android:data="http://www.instagram.com/letsroolet" />-->
<!--        </Preference>-->

    </PreferenceCategory>

</PreferenceScreen>