<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/row02">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/row02"
        android:text="@string/hold_up"
        android:textColor="@color/black_80"
        android:textSize="@dimen/caption10"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/row02"
        android:layout_marginTop="@dimen/row0025"
        android:layout_marginEnd="@dimen/row02"
        android:gravity="center"
        android:text="@string/are_you_sure_you_want_to_delete_this_party"
        android:textSize="@dimen/caption6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <Button
        android:id="@+id/negativeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/row02"
        android:layout_marginTop="@dimen/row01"
        android:layout_marginEnd="@dimen/row01"
        android:layout_marginBottom="@dimen/row02"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/nah"
        android:textAllCaps="false"
        android:textSize="@dimen/caption8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/positiveButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/messageTextView" />

    <Button
        android:id="@+id/positiveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/row01"
        android:layout_marginTop="@dimen/row01"
        android:layout_marginEnd="@dimen/row02"
        android:layout_marginBottom="@dimen/row02"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/yea"
        android:textAllCaps="false"
        android:textSize="@dimen/caption8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/negativeButton"
        app:layout_constraintTop_toBottomOf="@id/messageTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>