<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|center"
    android:background="@color/off_white_smoke">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/row02"
        android:layout_marginTop="@dimen/row02"
        android:layout_marginEnd="@dimen/row02"
        android:layout_marginBottom="@dimen/row01"
        android:gravity="center"
        android:text="@string/phone_numbers"
        android:textColor="@color/black_80"
        android:textSize="@dimen/caption10"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instructionsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/row02"
        android:layout_marginEnd="@dimen/row02"
        android:gravity="center"
        android:text="@string/select_phone_label"
        android:textColor="@color/black_80"
        android:textSize="@dimen/caption6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <LinearLayout
        android:id="@+id/buttonsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/row02"
        android:layout_marginTop="@dimen/row01"
        android:layout_marginEnd="@dimen/row02"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/bumperSpace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instructionsTextView">


    </LinearLayout>

    <Space
        android:id="@+id/bumperSpace"
        android:layout_width="match_parent"
        android:layout_height="@dimen/row01"
        app:layout_constraintBottom_toTopOf="@id/cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/row02"
        android:layout_marginEnd="@dimen/row02"
        android:layout_marginBottom="@dimen/row02"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>