<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialogContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_20">

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editGroupImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/toolbar_icon_margin"
        android:gravity="center"
        android:textAllCaps="true"
        android:text="@string/edit"
        android:textColor="@color/white_100"
        android:textSize="@dimen/caption4"
        app:layout_constraintBottom_toBottomOf="@id/space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/space" />

    <ImageView
        android:id="@+id/tutorialArrowImageView"
        android:layout_width="@dimen/row08"
        android:layout_height="@dimen/row08"
        android:contentDescription="@null"
        android:src="@drawable/ic_baseline_north_east_24"
        app:layout_constraintEnd_toStartOf="@+id/editGroupImageView"
        app:layout_constraintTop_toBottomOf="@+id/editGroupImageView" />

    <TextView
        android:id="@+id/instructionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/row01"
        android:layout_marginTop="@dimen/row01"
        android:layout_marginEnd="@dimen/row02"
        android:fontFamily="@font/gochi_hand_regular"
        android:padding="@dimen/row01"
        android:text="@string/tap_here_to_edit_your_party"
        android:textColor="@color/white_100"
        android:textSize="@dimen/subhead3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tutorialArrowImageView" />

    <ImageView
        android:id="@+id/secondaryTutorialArrowImageView"
        android:layout_width="@dimen/row08"
        android:layout_height="@dimen/row08"
        android:layout_marginBottom="@dimen/row01"
        android:contentDescription="@null"
        android:src="@drawable/ic_baseline_arrow_downward_24"
        app:layout_constraintBottom_toTopOf="@+id/callActionButton"
        app:layout_constraintEnd_toEndOf="@+id/callActionButton"
        app:layout_constraintStart_toStartOf="@+id/callActionButton" />

    <TextView
        android:id="@+id/secondaryInstructionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/row01"
        android:fontFamily="@font/gochi_hand_regular"
        android:gravity="center"
        android:text="@string/tap_this_button_to_call_a_random_member_from_this_party"
        android:textColor="@color/white_100"
        android:textSize="@dimen/subhead3"
        app:layout_constraintBottom_toTopOf="@+id/secondaryTutorialArrowImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/callActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/row02"
        android:layout_marginBottom="@dimen/row02"
        android:contentDescription="@null"
        android:src="@drawable/ic_baseline_phone_24"
        app:backgroundTint="@color/turquoise"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white_100" />

    <TextView
        android:id="@+id/tapAnywhereTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/row01"
        android:layout_marginTop="@dimen/row01"
        android:fontFamily="@font/gochi_hand_regular"
        android:padding="@dimen/row01"
        android:text="@string/tap_anywhere_to_dismiss"
        android:textColor="@color/white_100"
        android:textSize="@dimen/caption10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>