<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/black_50">

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/addGroupImageView"
        android:layout_width="@dimen/row03"
        android:layout_height="@dimen/row03"
        android:layout_marginEnd="@dimen/row03"
        android:contentDescription="@null"
        android:src="@drawable/ic_outline_group_add_24"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/space"
        app:layout_constraintEnd_toStartOf="@id/settingsImageView"
        app:layout_constraintTop_toTopOf="@id/space"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/settingsImageView"
        android:layout_width="@dimen/row03"
        android:layout_height="@dimen/row03"
        android:layout_marginEnd="@dimen/toolbar_icon_margin"
        android:contentDescription="@null"
        android:src="@drawable/ic_outline_settings_24"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/space"
        app:layout_constraintEnd_toEndOf="@id/space"
        app:layout_constraintTop_toTopOf="@id/space"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/skipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/row01"
        android:layout_marginTop="@dimen/row01"
        android:fontFamily="@font/gochi_hand_regular"
        android:padding="@dimen/row01"
        android:text="@string/skip"
        android:textColor="@color/white_100"
        android:textSize="@dimen/subhead3"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/space"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/space" />

    <ImageView
        android:id="@+id/tutorialArrowImageView"
        android:layout_width="@dimen/row06"
        android:layout_height="@dimen/row06"
        android:layout_marginTop="@dimen/row02"
        android:contentDescription="@null"
        android:src="@drawable/ic_baseline_north_east_24"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@id/addGroupImageView"
        app:layout_constraintTop_toBottomOf="@+id/settingsImageView"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tapHereCreatePartyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/gochi_hand_regular"
        android:gravity="center"
        android:text="@string/tap_add_group_or_settings"
        android:textColor="@color/white_100"
        android:textSize="@dimen/caption10"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tutorialArrowImageView"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/instructionsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/row04"
        android:layout_marginEnd="@dimen/row04"
        android:layout_marginBottom="@dimen/row02"
        android:fontFamily="@font/gochi_hand_regular"
        android:gravity="center"
        android:text="@string/roolet_uses_contacts_message"
        android:textColor="@color/white_100"
        android:textSize="@dimen/caption10"
        app:layout_constraintBottom_toTopOf="@+id/groupItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tapHereCreatePartyTextView"
        app:layout_constraintVertical_chainStyle="packed" />

    <include
        android:id="@+id/groupItem"
        layout="@layout/list_item_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/row02"
        android:layout_marginEnd="@dimen/row02"
        android:layout_marginBottom="@dimen/row08"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tapAnywhereTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructionsTextView"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tapAnywhereTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/row01"
        android:layout_marginTop="@dimen/row01"
        android:fontFamily="@font/gochi_hand_regular"
        android:padding="@dimen/row01"
        android:text="@string/tap_anywhere_to_continue"
        android:textColor="@color/white_100"
        android:textSize="@dimen/caption12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>