<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RooletActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:animateLayoutChanges="true"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/roolet"
        app:titleTextColor="@color/white_100" />

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/productionsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/row01">

        <ImageView
            android:id="@+id/cirtualImageView"
            android:layout_width="@dimen/row04"
            android:layout_height="@dimen/row04"
            android:layout_marginEnd="@dimen/row005"
            android:layout_marginBottom="@dimen/row01"
            android:contentDescription="@null"
            android:src="@drawable/cirtual_logo"
            app:layout_constraintBottom_toTopOf="@id/productionsTextView"
            app:layout_constraintEnd_toStartOf="@+id/digsImageView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/digsImageView"
            android:layout_width="@dimen/row04"
            android:layout_height="@dimen/row04"
            android:layout_marginStart="@dimen/row005"
            android:layout_marginBottom="@dimen/row01"
            android:contentDescription="@null"
            android:src="@drawable/d17_logo"
            app:layout_constraintBottom_toTopOf="@id/productionsTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cirtualImageView" />

        <TextView
            android:id="@+id/productionsTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/row00025"
            android:gravity="center"
            android:text="@string/cirtual_x_d17_productions"
            android:textSize="@dimen/caption1"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/makingStuffTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/makingStuffTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/row01"
            android:gravity="center"
            android:text="@string/making_fun_stuff"
            android:textSize="@dimen/caption1"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>